--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port = 9092
+spring.application.name = demo service application name
+spring.application.id = 10
 
+# Local mongodb configuration.
+spring.data.mongodb.host = localhost
+spring.data.mongodb.port = 27017
+spring.data.mongodb.database = test
